[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11.8",
    "openai",
    "pydantic",
    "pydantic-settings",
    "rich",
    "typer",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["agent"]
