[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11.8",
    "openai",
    "pydantic",
    "pydantic-settings",
    "rich",
    "typer",
]

[project.scripts]
agent = "agent.__main__:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["agent"]
